--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,6 +72,8 @@ jobs:
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./out
+      env:
+        FONTAWESOME_PACKAGE_TOKEN: ${{ secrets.FONTAWESOME_PACKAGE_TOKEN }}
 
   # Deployment job
   deploy:
