--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,23 @@
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 nodeLinker: node-modules
 
-yarnPath: .yarn/releases/yarn-3.6.1.cjs
+yarnPath: .yarn/releases/yarn-4.3.1.cjs
+
+
+injectEnvironmentFiles:
+  - .env
+  - .env.yarn?
+  - .env.local?
+
+npmScopes:
+ fortawesome:
+   npmAlwaysAuth: true
+   npmRegistryServer: "https://npm.fontawesome.com/"
+   npmAuthToken: ${FONTAWESOME_PACKAGE_TOKEN}
+ awesome.me:
+   npmAlwaysAuth: true
+   npmRegistryServer: "https://npm.fontawesome.com/"
+   npmAuthToken: ${FONTAWESOME_PACKAGE_TOKEN}
