--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@headlessui/react": "1.7.19",
+    "@headlessui/react": "^1.7.19",
     "@next/bundle-analyzer": "14.2.3",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.12",
@@ -42,7 +42,7 @@
     "remark-gfm": "^4.0.0",
     "remark-github-blockquote-alert": "^1.2.1",
     "remark-math": "^6.0.0",
-    "tailwindcss": "^3.4.3",
+    "tailwindcss": "^3.4.6",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
